# stockmanager

./: .gitignore  CMakeLists.txt  README  README.md  build.sh  conanfile.txt  rc_stock_manager.cpp  stock_manager.kdev4  stock_manager.qrc
.github/workflows/: release.yml
.kdev4/: stock_manager.kdev4
sqlite_orm/: sqlite_orm.h
src/: about.cpp  about.h  about.ui  account.cpp  account.h  add_new.cpp  add_new.h  add_new.ui  add_new_sell.cpp  add_new_sell.h  add_new_sell.ui  database.cpp  database.h  login.cpp  login.h  main.cpp  register.cpp  register.h  search.ui  sell_items.cpp  sell_items.h  sell_items.ui  settings.cpp  settings.h  settings.ui  sha256.cpp  sha256.h  stock_manager.cpp  stock_manager.h  stock_manager.ui  structs.h  styles.qss  ui_about.h  ui_add_new.h  ui_add_new_sell.h  ui_search.h  ui_sell_items.h  ui_settings.h  ui_stock_manager.h  utils.cpp  (+2 more)
src/ui/: about.ui  account.ui  add_new.ui  add_new_sell.ui  edit_item.ui  edit_sale.ui  login.ui  register.ui  sell_items.ui  settings.ui  stock_manager.ui  ui_about.h  ui_account.h  ui_add_new_sell.h  ui_edit_item.h  ui_edit_sale.h  ui_login.h  ui_register.h  ui_search.h  ui_settings.h  ui_stock_manager.h
tools/: rekey.c
